--- a/requirements.txt
+++ b/requirements.txt
@@ -20,22 +20,29 @@ frozenlist==1.3.1
 hexbytes==0.3.0
 idna==3.3
 importlib-resources==5.9.0
+iniconfig==1.1.1
 ipfshttpclient==0.8.0a2
 jsonschema==4.13.0
 lru-dict==1.1.8
 multiaddr==0.0.9
 multidict==6.0.2
 netaddr==0.8.0
+packaging==21.3
 parsimonious==0.8.1
 pkg_resources==0.0.0
 pkgutil_resolve_name==1.3.10
+pluggy==1.0.0
 protobuf==3.20.1
+py==1.11.0
 pycryptodome==3.15.0
+pyparsing==3.0.9
 pyrsistent==0.18.1
+pytest==7.1.3
 requests==2.28.1
 rlp==2.0.1
 six==1.16.0
 thread-decorator==0.2
+tomli==2.0.1
 toolz==0.12.0
 urllib3==1.26.11
 varint==1.0.2
